fixed the known issues

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,11 +1,10 @@
 [project]
 name = "multi-agentapp-using-adk"
-version = "0.1.0"
-description = "Add your description here"
+version = "1.0"
+description = "multi agent app using google adk with custom agent"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "google-adk>=1.2.1",
     "litellm>=1.72.1",
-    "pypdf>=5.6.0",
 ]
